# Turbo-GNN

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  TODO.md  benchmark.py  benchmark_cusparse_spmm.py  benchmark_dgl_message_passing.py  benchmark_results_norm_left_200_iters.csv  benchmark_results_norm_none_200_iters.csv  benchmark_results_spmm.csv  cusparse_spmm.cpp  cusparse_spmm.py  data.py  edge_norm_bindings.cpp  edge_norm_kernels.cu  environment.yml  gmon.out  kernels.cu  pyproject.toml  setup.py  test_edge_norm.py  testing.ipynb
.github/workflows/: _build.yml  build-wheels.yml  build.yml  publish.yml
configs/benchmarks/: microbench.yaml  profile.yaml
configs/datasets/: dgl_cora.yaml  dgl_reddit.yaml  pyg_amazon_computers.yaml  pyg_cora.yaml
configs/kernels_measurements/: base_config.yaml  gatv2_single_head_cfg.yaml  gatv2_test_partition.yaml  gcn.yaml  gt.yaml  gt_single_head_cfg.yaml  min_aggr.yaml  params_grid.yaml
configs/kernels_measurements/arxiv/: gcn.yaml
configs/kernels_measurements/reordering/: gt.yaml  min_aggr.yaml
configs/models/: agnn_tcgnn.yaml  gat.yaml  gat_cugraph.yaml  gat_dgl.yaml  gat_pyg.yaml  gatv2_cugraph.yaml  gatv2_dgl.yaml  gatv2_pyg.yaml  gcn.yaml  gcn_cusparse.yaml  gcn_dgl.yaml  gcn_pyg.yaml  gcn_tcgnn.yaml  gcn_torch.yaml  gin.yaml  gin_tcgnn.yaml  graphsage.yaml  gt.yaml  gt_dgl.yaml  mean_aggr_torch.yaml  mean_aggregation_torch.yaml  node_classifier_128_hidden_8_heads.yaml
configs/optuna/: example_cusparse.yaml
configs/training/: base.yaml
csrc/: common.cuh  kernels.cuh  turbo_gnn.cpp
csrc/gatv2/: gatv2_kernel.cu
csrc/gt/: graph_transformer.cu
data/: benchmark_results_norm_both_200_iters.csv  benchmark_results_norm_right_200_iters.csv
demo/: smoke_test.py
dev/daniilkk/gat_v2_with_constant_memory/: benchmark3.cu  constant.cu  global.cu
dev/daniilkk/notebooks/: test_fusegnn.ipynb
dev/fvelikon/gat_v2_warp_parallel/: bench.py  gatv2_logs  kernel_draft.cu
dev/sinfillo/: bench_gatv2.py  run_bench.sh  run_bench_ncu.sh
dev/sinfillo/bench_results/: bench_20260516_163706.txt  bench_20260516_173949.txt  bench_20260517_140959.txt  bench_20260520_213956.txt  bench_ncu_20260520_221334.txt
dev/sinfillo/exp_min_aggr/: perf_shmem_mixed.txt
dev/tensorbandit/: triton-matmul.py
dev/zen0no/: graph_attention_preprocess.py
docker/: .dockerignore  Dockerfile
notebooks/: analysis.ipynb  check_torch_scatter_reduce.ipynb  test_cugraph_backend.ipynb  test_dgl_message_pasing_directions.ipynb
scripts/: _common.py  autotune.py  benchmark.py  kernel_launch_comparison.py  kernel_tune.py  profile.py  run_arxiv_sweep_dgl.sh  run_profile.py  train.py  validate.py
src/backends/: __init__.py  autotune.py  base.py  registry.py
src/backends/cuda_backend/: __init__.py  common.cuh  conv.py  gatv2_kernel.cu  gatv2_kernel2.cu  graph_transformer.cu  min_aggr_1.cu  utils.py
src/backends/cuda_backend/gatv2_aggr/: gatv2_kernel.cu  utils.py
src/backends/cuda_backend/gt_aggr/: graph_transformer.cu  utils.py
src/backends/cuda_backend/min_aggr/: min_aggr.cu  min_aggr_base.cu  min_aggr_base_shmem.cu  min_aggr_base_warp_reduce.cu  min_aggr_cool.cu  min_aggr_shmem.cu  min_aggr_warp_reduce.cu  test_min_aggr.cu  utils.py
src/backends/cuda_backend/reduction_aggr/: reduction_aggr.cu  reduction_aggr_base.cu  utils.py
src/backends/cuda_backend/spmm_aggr/: cusparse_spmm.cpp  edge_norm_kernels.cu  utils.py
src/backends/cuda_test_backend/dot_aggr/: utils.py
src/backends/cuda_test_backend/mean_aggr/: utils.py
src/backends/cugraph_backend/: conv.py
src/backends/cusparse_backend/: __init__.py  conv.py  cusparse_spmm.cpp  edge_norm_kernels.cu  utils.py
src/backends/dfgnn_backend/: bindings.py  conv.py
src/backends/dfgnn_hyper_backend/: __init__.py  bindings.py  conv.py
src/backends/dfgnn_tiling_backend/: __init__.py  bindings.py  conv.py
src/backends/dgl/: conv.py  utils.py
src/backends/dgl_backend/: conv.py  utils.py
src/backends/fused3s/: bindings.py  conv.py
src/backends/fused3s_backend/: F3S.cpp  F3S_kernel.cu  __init__.py  bindings.py  config.h  conv.py  ptx.h  utils.cu
src/backends/fusegnn_backend/: conv.py  utils.py
src/backends/fusegnn_backend/convs/: __init__.py
src/backends/fusegnn_backend/cuda/: Accelerating-GNNs.code-workspace  format_kernel.cu
src/backends/fusegnn_backend/functional/: __init__.py  aggregate.py  dropout.py  gat.py
src/backends/pyg/: conv.py  utils.py
src/backends/pyg_backend/: conv.py
src/backends/tcgnn_backend/: conv.py
src/backends/torch_native/: __init__.py  utils.py
src/backends/torch_native_backend/: __init__.py  conv.py
src/backends/triton_backend/: conv.py  kernels_impl.py
src/benchmarking/: autotuner.py  memory.py  microbench.py  profiler.py
src/data/: converters.py  datasets.py  graphland_datasets.py  loaders.py
src/models/: __init__.py  base.py  config.py  registry.py
src/models/architecture/: __init__.py  classifier.py  encoder.py
src/models/architecture.py/: __init__.py  classifier.py  encoder.py
src/models/layers/: __init__.py  blocks.py  conv_dispatcher.py  gat.py  gcn.py  gin.py  sage.py
src/training/: ___init__.py  __init__.py  hooks.py  metrics.py  optimizer.py  scheduler.py  trainer.py
src/utils/: checkpointing.py  scripts_utils.py
tests/correctness/: fixtures.py  test_cugraph_backend.py  test_fused3s.py  test_gatv2.py  test_gatv2_correctness.py  test_graph_transformer.py  test_gt_correctness.py  test_matmul_convs.py  test_mean_aggr.py  test_min_aggr_2d_kernel.py  test_min_aggr_precision.py  test_min_aggr_vs_dgl.py  test_pooling_aggr.py  test_reduction_aggr_precision.py  test_reduction_aggr_vs_dgl.py  test_undirected_kernels.py  test_verify_backends.py  test_warp_parallel.py
tests/integration/: launch_training_pipeline.sh
tests/performance/: min_aggr_benchmarks.py
tests/unit/: test_autotune.py  test_graphland_datasets.py  test_triton_autotune.py
turbo_gnn/: __init__.py  _functions.py  _kernels.py  graph.py  ops.py
whl/: index.html
whl/turbo-gnn/: index.html
(+3 files in other folders)
